--- a/assets/_scss/_base.scss
+++ b/assets/_scss/_base.scss
@@ -95,6 +95,10 @@ img {
   text-align: center;
 }
 
+#gl-finder span {
+  color: gray;
+}
+
 #gl-finder a:link, #gl-finder a:visited {
   color: $brandcol4;
 }
