--- a/_layouts/witan.html
+++ b/_layouts/witan.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-  {% include head.html %}  
+  {% include head.html %}
   <body class="product">
     {% include header.html nav=site.data.nav %}
 
@@ -17,7 +17,7 @@
       <nav class="nav-sub">
         <ul class="nav-sub-list">
           <li><a href="#benefits">Benefits</a></li>
-          <li><a href="#clients">Clients</a></li>
+          <!--<li><a href="#clients">Clients</a></li>-->
           <li><a href="#features">Features</a></li>
           <li><a href="#pricing">Pricing</a></li>
           <!-- <li><a href="#faq">FAQ</a></li> -->
@@ -29,7 +29,7 @@
     <!-- OVERVIEW -->
       <div class="columns content">
         <div class="columns-col100">
-          <h2>Overview</h2>
+          <h2>Use data to improve services and save money</h2>
           <p class="intro">{{ page.overview }}</p>
           <blockquote>
             <p>Mastodon C's deep technical expertise with data, and their collaborative approach, have been great for us at City Hall. Their technology powers our new approach to city data storage and analysis, and is a core part of our approach to projecting the future of London.</p>
@@ -43,7 +43,7 @@
     <section class="features-wrap">
       <div class="columns">
         <div class="columns-col100">
-          <h2 id="benefits">Benefits</h2>
+          <h2 id="benefits">The Witan Suite</h2>
             <ul class="grid grid-50">
               {% for benefit in page.benefits %}
               <li class="grid-item left inline">
@@ -99,7 +99,7 @@
     <section class="tech-wrap">
       <div class="columns">
         <div class="columns-col100">
-          <h2 id="features">Features</h2>
+          <h2 id="features">How does Witan deliver insights and efficiency?</h2>
             <ul class="grid grid-50">
               {% for feature in page.features %}
               <li class="grid-item left">
@@ -116,17 +116,17 @@
     <section class="pricing-wrap">
         <div class="columns">
             <div class="columns-col100">
-                <h2 id="pricing">Pricing</h2>
+                <h2 id="pricing">Features and Pricing</h2>
                 <div class="Rtable Rtable--3cols Rtable--collapse">
 
                     {% for price in page.pricing %}
                     <div style="order:0;" class="Rtable-cell Rtable-cell--head title {% unless forloop.first %}border{% endunless %}"><h1>{{ price.title }}</h1></div>
                     <div style="order:1;" class="Rtable-cell {% unless forloop.first %}border{% endunless %}"> {{ price.desc }}</div>
                     <div style="order:2;" class="Rtable-cell {% unless forloop.first %}border{% endunless %}">
-                        <h1>For</h1>
+                        <h1>Features</h1>
                         <ul>
-                            {% for price_for in price.for  %}
-                            <li>{{ price_for }}</li>
+                            {% for price_feature in price.features  %}
+                            <li>{{ price_feature }}</li>
                             {% endfor  %}
                         </ul>
                     </div>
@@ -140,7 +140,10 @@
                         <p>({{ price.min-term }})</p>
                     </div>
                     <div style="order:6;" class="Rtable-cell Rtable-cell--foot {% unless forloop.first %}border{% endunless %}">
-                        <a class="contact-link" target="_blank" href="mailto:theteam@mastodonc.com?subject=I%20am%20interested%20in%20{{ price.title | url_encode }}!&body=Please%20send%20me%20more%20information.">Contact Us</a>
+                        <a class="contact-link" target="_blank"
+                        href="mailto:theteam@mastodonc.com?subject=I%20am%20interested%20in%20{{
+                        price.title | url_encode
+                        }}!&body=Please%20send%20me%20more%20information.">Get the details</a>
                     </div>
                     {% endfor %}
                 </div>
@@ -172,6 +175,6 @@
     <!-- Start of HubSpot Embed Code -->
   <script type="text/javascript" id="hs-script-loader" async defer src="//js.hs-scripts.com/3461032.js"></script>
 <!-- End of HubSpot Embed Code -->
-  
+
   </body>
 </html>
