--- a/_layouts/witan.html
+++ b/_layouts/witan.html
@@ -141,9 +141,7 @@
                     </div>
                     <div style="order:6;" class="Rtable-cell Rtable-cell--foot {% unless forloop.first %}border{% endunless %}">
                         <a class="contact-link" target="_blank"
-                        href="mailto:theteam@mastodonc.com?subject=I%20am%20interested%20in%20{{
-                        price.title | url_encode
-                        }}!&body=Please%20send%20me%20more%20information.">Get the details</a>
+                        href="http://blog.mastodonc.com/{{ price.landing-page }}">Get the details</a>
                     </div>
                     {% endfor %}
                 </div>
